Fixed spacing for the hero welcome rp page and added contrast to navbar

--- a/src/component-style.css
+++ b/src/component-style.css
@@ -75,6 +75,9 @@ body {
 .grid--3-col {
   grid-template-columns: repeat(3, 1fr);
 }
+.grid--4-col {
+  grid-template-columns: repeat(4, 1fr);
+}
 /*##############
 ###Button###
 ################*/
@@ -104,8 +107,15 @@ header {
   background-color: rgba(116, 12, 220, 0.03);
   border-bottom: solid 1px rgba(116, 12, 220, 0.285);
   padding: auto;
-  position: sticky;
+  width: 100%;
   top: 0;
+  height: 6rem;
+  transition: all ease 1s;
+}
+.sticky-nav {
+  position: fixed;
+  color: #740cdc;
+  background-color: rgba(116, 12, 220, 0.4);
 }
 
 .nav-links li {
@@ -114,9 +124,11 @@ header {
   padding: 0 3.6rem;
   font-weight: 500;
 }
+.nav-links--scroll {
+  color: #740cdc;
+}
 .nav-links > li > a {
   text-decoration: none;
-
   color: #fff;
   transition: all 0.3s ease 0s;
 }
@@ -125,7 +137,7 @@ header {
 }
 
 .logo-img {
-  height: 100px;
+  max-height: 50px;
 }
 .img-box {
   padding-right: 170px;
@@ -262,10 +274,10 @@ ion-icon {
 }
 .rp-card {
   border: solid 1px #740cdc;
-  margin: 2rem;
+
+  margin-top: 2rem;
   border-radius: 10px;
   background-color: rgba(116, 12, 220, 0.137);
-  padding: 2rem;
 }
 .rp-img {
   display: flex;
@@ -275,7 +287,7 @@ ion-icon {
   display: flex;
   gap: 1rem;
   margin: 1rem;
-  justify-content: flex-end;
+  justify-content: space-around;
   margin-top: 2.4rem;
 }
 .rp-btn--style {
@@ -290,17 +302,19 @@ ion-icon {
 ###RP-TAG###
 ################*/
 .tag-container p {
-  background-color: #740cdc;
+  background-color: rgba(116, 12, 220, 0.194);
   border-radius: 10px;
   color: #fff;
   display: inline-block;
   padding: 0.4rem;
   font-family: inherit;
   margin-bottom: 1.2rem;
+  border: #740cdc 1px solid;
 }
 .rp-tags {
   display: flex;
   gap: 0.8rem;
+  justify-content: space-around;
 }
 
 /*##############
